added more words to word bank on index.html

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 
       <div class="word">give</div>
 
+      <div class="word">hand</div>
+
+      <div class="word">hands</div>
+
       <div class="word">happy</div>
 
       <div class="word">have</div>
@@ -131,6 +135,8 @@
       <div class="word">surprise</div>
 
       <div class="word">sweet</div>
+
+      <div class="word">take</div>
 
       <div class="word">the</div>
 
