added more words to word bank on index.html

--- a/index.html
+++ b/index.html
@@ -164,7 +164,11 @@
 
       <div class="word">yours</div>
 
+      <div class="word">.</div>
+
       <div class="word">?</div>
+
+      <div class="word">!</div>
 
       
     </div>
