added more words to word bank on index.html

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 
       <div class="word">forever</div>
 
+      <div class="word">fuzzy</div>
+
+      <div class="word">fuzzies</div>
+
       <div class="word">give</div>
 
       <div class="word">hand</div>
@@ -166,7 +170,19 @@
 
       <div class="word">.</div>
 
+      <div class="word">.</div>
+
+      <div class="word">.</div>
+
       <div class="word">?</div>
+
+      <div class="word">?</div>
+
+      <div class="word">?</div>
+
+      <div class="word">!</div>
+
+      <div class="word">!</div>
 
       <div class="word">!</div>
 
